--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="fa">
   <head>
-    <title>boot</title>
+    <title>bootstrab integ</title>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -34,7 +34,7 @@
               class="ml-3"
               style="height: 40px"
             />
-            <h2 class="text-nowrap d-inline">Integrated ACD</h2>
+            <p class="text-nowrap d-inline">Integrated ACD</p>
           </a>
           <button
             class="navbar-toggler"
@@ -310,9 +310,9 @@
               style="top: 8rem; height: 50%"
             >
               <div class="d-flex flex-column h-100 justify-content-center">
-                <h2 class="display-5 text-light text-center">
+                <h1 class="display-5 text-light text-center">
                   وبلاگ Integrated ACD
-                </h2>
+                </h1>
               </div>
             </section>
           </div>
